@@ -1,3 +1,6 @@
+2015-09-27  Kirit Saelensminde  <kirit@felspar.com>
+ Add digest and HMAC overloads for `std::vector<unsignec char>`.
+
 2015-08-21  Kirit Saelensminde  <kirit@felspar.com>
  Moved the tagged string header.
 
